Adapted the code to use gurobi optimizer instead of Dijkstra's Algorithm. Training ran successfully.

--- a/Notebooks/Main.ipynb
+++ b/Notebooks/Main.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "1d9208df",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
     "for x_batch, c_batch in train_loader:\n",
     "    x, c = x_batch, c_batch\n",
     "    cp = model(x)\n",
-    "    w, z = grid.solve(source=source, target=target, costs=c)\n",
+    "    w, z = grid.solve(source=source, target=target, cost=c)\n",
     "    break"
    ]
   },
