Fixed wrong folder location of Notebooks.

--- a/src/Notebooks/Main_PyEPO.ipynb
+++ b/src/Notebooks/Main_PyEPO.ipynb
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8a088b11",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the parent directory to the path\n",
     "import sys, os\n",
-    "sys.path.insert(0, os.path.abspath(\"..\"))"
+    "sys.path.insert(0, os.path.abspath(\"../..\"))"
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8bf05ae1",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5f8e903e",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
     "m, n = 5, 5\n",
     "\n",
     "# Create a grid instance\n",
-    "opt_model = shortestPathGrb()"
+    "opt_model = shortestPathGrb(m, n)"
    ]
   },
   {
