Implemented first version of Bender's decomposition in notebook.

--- a/src/Notebooks/Main.ipynb
+++ b/src/Notebooks/Main.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7b2f447c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the parent directory to the path\n",
     "import sys, os\n",
-    "sys.path.insert(0, os.path.abspath(\"..\"))\n",
+    "sys.path.insert(0, os.path.abspath(\"../..\"))\n",
     "\n",
     "# Import numpy and ShortestPathGrid class\n",
     "import numpy as np\n",
