Updated name change of BendersDecomposition solver in Notebook.

--- a/src/Notebooks/Benders_Decomposition.ipynb
+++ b/src/Notebooks/Benders_Decomposition.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "27ef120a",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "e42d2280",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "081c48ea",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "011e56fd",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "        5.92547011,  3.30533878,  0.31272813,  8.46802961,  7.89763036])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,12 +113,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "8d1b3542",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Restricted license - for non-production use only - expires 2026-11-23\n"
+     ]
+    }
+   ],
    "source": [
-    "from src.models.BendersDecomposition import BendersDecomposition\n",
+    "from src.solvers.BendersDecomposition import BendersDecomposition\n",
     "\n",
     "# Initialize the BendersDecomposition with the grid\n",
     "benders = BendersDecomposition(grid, k, interdiction_cost)"
@@ -126,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "9bbe2f61",
    "metadata": {},
    "outputs": [
@@ -148,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "83766d68",
    "metadata": {},
    "outputs": [
