Created classes for artificial data generation.

--- a/src/Notebooks/Asym_SPNI_PO.ipynb
+++ b/src/Notebooks/Asym_SPNI_PO.ipynb
@@ -8,7 +8,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "801ba03f",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5531c1c4",
    "metadata": {},
    "outputs": [],
@@ -31,12 +31,13 @@
     "from src.solvers.spnia_asym import AsymmetricSPNI\n",
     "from src.models.ShortestPathGrb import shortestPathGrb\n",
     "from src.models.ShortestPathGrid import ShortestPathGrid\n",
-    "from src.solvers.BendersDecomposition import BendersDecomposition"
+    "from src.solvers.BendersDecomposition import BendersDecomposition\n",
+    "from data.DataGenerator import DataGenerator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6b6701b9",
    "metadata": {},
    "outputs": [],
@@ -49,12 +50,16 @@
     "Q = 0.6\n",
     "B = 5\n",
     "network = (6, 8)\n",
-    "np.random.seed(31)"
+    "np.random.seed(31)\n",
+    "\n",
+    "# ML hyperparameters\n",
+    "num_features = 5\n",
+    "num_data_samples = 1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "24219dd8",
    "metadata": {},
    "outputs": [
@@ -73,102 +78,55 @@
     "# Generate true and estimated costs and delays with the formula from Bayrak & Bailey (2008)\n",
     "true_costs = (np.random.rand(network[0] * (network[1] - 1) + (network[0] - 1) * network[1]) * (c_max - c_min) + c_min).round(0)\n",
     "true_delays = (np.random.rand(network[0] * (network[1] - 1) + (network[0] - 1) * network[1]) * (d_max - d_min) + d_min).round(0)\n",
-    "est_costs = (np.random.rand(network[0] * (network[1] - 1) + (network[0] - 1) * network[1]) * 2 * (1 - Q) * true_costs + Q * true_costs).round(0)\n",
-    "est_delays = (np.random.rand(network[0] * (network[1] - 1) + (network[0] - 1) * network[1]) * 2 * (1 - Q) * true_delays + Q * true_delays).round(0)\n",
+    "# est_costs = (np.random.rand(network[0] * (network[1] - 1) + (network[0] - 1) * network[1]) * 2 * (1 - Q) * true_costs + Q * true_costs).round(0)\n",
+    "# est_delays = (np.random.rand(network[0] * (network[1] - 1) + (network[0] - 1) * network[1]) * 2 * (1 - Q) * true_delays + Q * true_delays).round(0)\n",
     "\n",
     "# Create the true and estimated graphs\n",
     "true_graph = ShortestPathGrid(network[0], network[1], true_costs)\n",
-    "est_graph = ShortestPathGrid(network[0], network[1], est_costs)\n",
+    "# est_graph = ShortestPathGrid(network[0], network[1], est_costs)\n",
     "\n",
     "# Visualize the the graphs with true and estimated costs\n",
-    "fig, ax = plt.subplots(1,2,figsize=(16, 6))\n",
-    "true_graph.visualize(ax=ax[0], title=\"True Graph\")\n",
-    "est_graph.visualize(ax=ax[1], title=\"Estimated Graph\")\n",
-    "fig.tight_layout()"
+    "# fig, ax = plt.subplots(1,2,figsize=(16, 6))\n",
+    "# true_graph.visualize(ax=ax[0], title=\"True Graph\")\n",
+    "# est_graph.visualize(ax=ax[1], title=\"Estimated Graph\")\n",
+    "# fig.tight_layout()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ccdae1cb",
+   "execution_count": 13,
+   "id": "936c41bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'DataGenerator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m data_gen = \u001b[43mDataGenerator\u001b[49m(\n\u001b[32m      2\u001b[39m     num_samples=\u001b[32m1000\u001b[39m,\n\u001b[32m      3\u001b[39m     num_costs=true_graph.num_cost,\n\u001b[32m      4\u001b[39m     num_features=num_features,\n\u001b[32m      5\u001b[39m     c_range=(c_min, c_max),\n\u001b[32m      6\u001b[39m     epsilon_bar=\u001b[32m0.05\u001b[39m\n\u001b[32m      7\u001b[39m )\n\u001b[32m      9\u001b[39m costs, features = data_gen.generate_data(num_samples=num_data_samples)\n",
+      "\u001b[31mNameError\u001b[39m: name 'DataGenerator' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "class PolynomialKernelFeatureMap:\n",
-    "    \"\"\"\n",
-    "    Implements the “reversed” polynomial‐kernel feature map:\n",
-    "        x = ((B @ c + 3) ** degree) / (3.5**degree * sqrt(p)) * ε,\n",
-    "    where\n",
-    "      - c ∈ ℝ^m is the input cost vector,\n",
-    "      - B ∈ {0,1}^{p×m} is a random Bernoulli mask,\n",
-    "      - ε ∼ Uniform(1−ε_bar, 1+ε_bar) is entrywise multiplicative noise.\n",
-    "    \"\"\"\n",
-    "    def __init__(self, m, p, degree=2, mask_prob=0.5, epsilon_bar=0.01, random_state=None):\n",
-    "        \"\"\"\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        m : int\n",
-    "            Dimensionality of the cost vector.\n",
-    "        p : int\n",
-    "            Number of output features.\n",
-    "        degree : int\n",
-    "            Polynomial degree.\n",
-    "        mask_prob : float\n",
-    "            Probability for B[i,j]=1 in the Bernoulli mask.\n",
-    "        epsilon_bar : float\n",
-    "            Half‐width of the uniform noise multiplier (ε ∈ [1−ε_bar,1+ε_bar]).\n",
-    "        random_state : int or None\n",
-    "            Seed for reproducibility.\n",
-    "        \"\"\"\n",
-    "        self.m = m\n",
-    "        self.p = p\n",
-    "        self.degree = degree\n",
-    "        self.mask_prob = mask_prob\n",
-    "        self.epsilon_bar = epsilon_bar\n",
-    "        self.rng = np.random.default_rng(random_state)\n",
-    "        # draw the random Bernoulli mask once\n",
-    "        self.B = self.rng.binomial(1, self.mask_prob, size=(self.p, self.m))\n",
     "\n",
-    "    def transform(self, c):\n",
-    "        \"\"\"\n",
-    "        Generate the polynomial‐kernel features for a given cost vector c.\n",
+    "data_gen = DataGenerator(\n",
+    "    num_samples=1000,\n",
+    "    num_costs=true_graph.num_cost,\n",
+    "    num_features=num_features,\n",
+    "    c_range=(c_min, c_max),\n",
+    "    epsilon_bar=0.05\n",
+    ")\n",
     "\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        c : array‐like of shape (m,)\n",
-    "            Input cost vector.\n",
-    "\n",
-    "        Returns\n",
-    "        -------\n",
-    "        x : ndarray of shape (p,)\n",
-    "            Output feature vector.\n",
-    "        \"\"\"\n",
-    "        c = np.asarray(c, dtype=float)\n",
-    "        if c.shape != (self.m,):\n",
-    "            raise ValueError(f\"Expected input of shape ({self.m},), got {c.shape}.\")\n",
-    "\n",
-    "        # 1) linear projection + shift\n",
-    "        proj = self.B @ c                  # shape (p,)\n",
-    "        shifted = proj + 3.0               # entrywise +3\n",
-    "\n",
-    "        # 2) polynomial expansion and normalization\n",
-    "        base = shifted**self.degree\n",
-    "        norm = (3.5**self.degree) * np.sqrt(self.p)\n",
-    "        base /= norm                       # shape (p,)\n",
-    "\n",
-    "        # 3) multiplicative uniform noise in [1-ε_bar, 1+ε_bar]\n",
-    "        eps = self.rng.uniform(1 - self.epsilon_bar,\n",
-    "                               1 + self.epsilon_bar,\n",
-    "                               size=self.p)\n",
-    "        x = base * eps\n",
-    "\n",
-    "        return x\n"
+    "costs, features = data_gen.generate_data(num_samples=num_data_samples)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "936c41bd",
+   "id": "df757343",
    "metadata": {},
    "outputs": [],
    "source": []
