Remove src prefix from internal imports

--- a/src/Notebooks/Bayrak08.ipynb
+++ b/src/Notebooks/Bayrak08.ipynb
@@ -40,10 +40,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from src.solvers.spnia_asym import AsymmetricSPNI\n",
-    "from src.models.ShortestPathGrb import shortestPathGrb\n",
-    "from src.models.ShortestPathGrid import ShortestPathGrid\n",
-    "from src.solvers.BendersDecomposition import BendersDecomposition"
+    "from solvers.spnia_asym import AsymmetricSPNI\n",
+    "from models.ShortestPathGrb import shortestPathGrb\n",
+    "from models.ShortestPathGrid import ShortestPathGrid\n",
+    "from solvers.BendersDecomposition import BendersDecomposition"
    ]
   },
   {
