--- a/src/Notebooks/Benders_Decomposition.ipynb
+++ b/src/Notebooks/Benders_Decomposition.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "# Import numpy and ShortestPathGrid class\n",
     "import numpy as np\n",
-    "from src.models.ShortestPathGrid import ShortestPathGrid"
+    "from models.ShortestPathGrid import ShortestPathGrid"
    ]
   },
   {
@@ -79,7 +79,7 @@
     }
    ],
    "source": [
-    "from src.models.ShortestPathGrb import shortestPathGrb\n",
+    "from models.ShortestPathGrb import shortestPathGrb\n",
     "\n",
     "opt_model = shortestPathGrb(grid)\n",
     "sol, obj = opt_model.solve(versatile=True)\n",
@@ -128,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.solvers.BendersDecomposition import BendersDecomposition\n",
+    "from solvers.BendersDecomposition import BendersDecomposition\n",
     "\n",
     "# Initialize the BendersDecomposition with the opt_model\n",
     "benders = BendersDecomposition(opt_model, k, interdiction_cost, max_cnt=20, eps=1e-3)"
