--- a/src/Notebooks/Game_A.ipynb
+++ b/src/Notebooks/Game_A.ipynb
@@ -39,8 +39,8 @@
    "source": [
     "# Import numpy and ShortestPathGrb class\n",
     "from numpy import arange, random\n",
-    "from src.models.ShortestPathGrb import shortestPathGrb\n",
-    "from src.models.ShortestPathGrid import ShortestPathGrid"
+    "from models.ShortestPathGrb import shortestPathGrb\n",
+    "from models.ShortestPathGrid import ShortestPathGrid"
    ]
   },
   {
@@ -280,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.models.LinearRegression import LinearRegression\n",
+    "from models.LinearRegression import LinearRegression\n",
     "\n",
     "# Instantiate linear regression model for prediction\n",
     "pred_model = LinearRegression(num_feat=num_feat, num_edges=opt_model_est.num_cost)"
@@ -328,7 +328,7 @@
     }
    ],
    "source": [
-    "from src.models.trainer import Trainer\n",
+    "from models.trainer import Trainer\n",
     "\n",
     "# Set the number of epochs for training\n",
     "epochs = 5\n",
@@ -491,7 +491,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.solvers.BendersDecomposition import BendersDecomposition\n",
+    "from solvers.BendersDecomposition import BendersDecomposition\n",
     "\n",
     "# Initialize the BendersDecomposition with the opt_model\n",
     "benders = BendersDecomposition(opt_model, k, interdiction_cost, max_cnt=20, eps=1e-3)"
