--- a/src/Notebooks/Main.ipynb
+++ b/src/Notebooks/Main.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "# Import numpy and ShortestPathGrid class\n",
     "import numpy as np\n",
-    "from src.models.ShortestPathGrid import ShortestPathGrid"
+    "from models.ShortestPathGrid import ShortestPathGrid"
    ]
   },
   {
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.models.LinearRegression import LinearRegression\n",
+    "from models.LinearRegression import LinearRegression\n",
     "\n",
     "# Instantiate linear regression model\n",
     "model = LinearRegression(num_feat=num_feat, num_edges=grid.num_edges())"
@@ -199,7 +199,7 @@
     }
    ],
    "source": [
-    "from src.models.trainer import Trainer\n",
+    "from models.trainer import Trainer\n",
     "\n",
     "# # 2) Build your two‐stage network:\n",
     "# #    e.g. lr = LinearRegression(...); opt = ShortestPath(...)\n",
