--- a/src/Notebooks/Main_PyEPO.ipynb
+++ b/src/Notebooks/Main_PyEPO.ipynb
@@ -39,8 +39,8 @@
    "source": [
     "# Import numpy and ShortestPathGrb class\n",
     "import numpy as np\n",
-    "from src.models.ShortestPathGrb import shortestPathGrb\n",
-    "from src.models.ShortestPathGrid import ShortestPathGrid"
+    "from models.ShortestPathGrb import shortestPathGrb\n",
+    "from models.ShortestPathGrid import ShortestPathGrid"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.models.LinearRegression import LinearRegression\n",
+    "from models.LinearRegression import LinearRegression\n",
     "\n",
     "# Instantiate linear regression model\n",
     "model = LinearRegression(num_feat=num_feat, num_edges=opt_model.num_cost)"
@@ -288,7 +288,7 @@
     }
    ],
    "source": [
-    "from src.models.trainer import Trainer\n",
+    "from models.trainer import Trainer\n",
     "\n",
     "# Set the number of epochs for training\n",
     "epochs = 5\n",
