Added regret computation to predict-then-optimize training.

--- a/src/Notebooks/Asym_SPNI_PO.ipynb
+++ b/src/Notebooks/Asym_SPNI_PO.ipynb
@@ -86,10 +86,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "936c41bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimizing for optDataset...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 800/800 [00:00<00:00, 1773.50it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimizing for optDataset...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "100%|██████████| 200/200 [00:00<00:00, 1772.01it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# # Generate artificial data samples\n",
     "# data_gen = DataGenerator(\n",
@@ -111,7 +141,14 @@
     ")\n",
     "\n",
     "# Split the data into training and testing sets\n",
-    "X_train, X_test, c_train, c_test = train_test_split(features, costs, test_size=test_size, random_state=random_seed)\n"
+    "X_train, X_test, c_train, c_test = train_test_split(features, costs, test_size=test_size, random_state=random_seed)\n",
+    "\n",
+    "# Create data loaders for training and testing\n",
+    "optnet_train_dataset = pyepo.data.dataset.optDataset(opt_model, X_train, c_train)\n",
+    "optnet_test_dataset = pyepo.data.dataset.optDataset(opt_model, X_test, c_test)\n",
+    "\n",
+    "optnet_train_loader = torch.utils.data.DataLoader(optnet_train_dataset, batch_size=data_loader_batch_size, shuffle=True)\n",
+    "optnet_test_loader = torch.utils.data.DataLoader(optnet_test_dataset, batch_size=data_loader_batch_size, shuffle=False)\n"
    ]
   },
   {
@@ -124,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "id": "533dc3ea",
    "metadata": {},
    "outputs": [],
@@ -138,10 +175,11 @@
     "model = nn.Sequential(\n",
     "    nn.Linear(input_size, hidden_size),  # first affine layer\n",
     "    nn.ReLU(),                           # non‐linearity\n",
-    "    nn.Linear(hidden_size, output_size)  # second affine layer\n",
+    "    nn.Linear(hidden_size, output_size),  # second affine layer\n",
+    "    nn.Sigmoid()                         # output activation function\n",
     ")\n",
     "\n",
-    "# 3) Define deviece and move the model to it\n",
+    "# 3) Define device and move the model to it\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "model.to(device)\n",
     "\n",
@@ -156,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "id": "0191123e",
    "metadata": {},
    "outputs": [
@@ -164,16 +202,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 0.3895\n",
-      "Epoch 2, Loss: 0.2375\n",
-      "Epoch 3, Loss: 0.1240\n",
-      "Epoch 4, Loss: 0.0687\n",
-      "Epoch 5, Loss: 0.0382\n"
+      "Epoch 1, Loss: 0.1010, Regret: 0.0535\n",
+      "Epoch 2, Loss: 0.1347, Regret: 0.0497\n",
+      "Epoch 3, Loss: 0.0511, Regret: 0.0471\n",
+      "Epoch 4, Loss: 0.1546, Regret: 0.0448\n",
+      "Epoch 5, Loss: 0.0516, Regret: 0.0443\n"
      ]
     }
    ],
    "source": [
-    "# 6) Training loop\n",
+    "# Define loss and regret vectors\n",
+    "losses = []\n",
+    "regrets = []\n",
+    "\n",
+    "# Training loop\n",
     "for epoch in range(epochs):\n",
     "    for x_batch, y_batch in train_loader:\n",
     "        x_batch, y_batch = x_batch.to(device), y_batch.to(device)\n",
@@ -187,7 +229,9 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "    print(f\"Epoch {epoch+1}, Loss: {loss.item():.4f}\")"
+    "    losses.append(loss.item())\n",
+    "    regrets.append(pyepo.metric.regret(model, opt_model, optnet_train_loader))\n",
+    "    print(f\"Epoch {epoch+1}, Loss: {losses[-1]:.4f}, Regret: {regrets[-1]:.4f}\")\n"
    ]
   },
   {
@@ -215,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "5b468ad3",
    "metadata": {},
    "outputs": [
@@ -230,8 +274,6 @@
    "source": [
     "# Instantiate linear regression model\n",
     "# model = LinearRegression(num_feat=num_features, num_edges=graph.num_cost)\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
     "\n",
     "# 1) Define your network dimensions\n",
     "input_size  =  num_features   # e.g. number of features in your cost‐vector\n",
@@ -249,8 +291,7 @@
     "spop = pyepo.func.SPOPlus(opt_model, processes=1)\n",
     "\n",
     "# Init optimizer\n",
-    "from torch import optim\n",
-    "optimizer = optim.Adam(model.parameters(), lr=.1)"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=.1)"
    ]
   },
   {
