Created two separate traners for predict-then-optimize and smart predict-then-optimize learning. Added an example for comparison to Asym_SPNI_PO notebook.

--- a/src/Notebooks/Asym_SPNI_PO.ipynb
+++ b/src/Notebooks/Asym_SPNI_PO.ipynb
@@ -40,7 +40,8 @@
     "from src.models.ShortestPathGrid import ShortestPathGrid\n",
     "from src.solvers.BendersDecomposition import BendersDecomposition\n",
     "from data.DataGenerator import DataGenerator\n",
-    "from models.trainer import Trainer"
+    "from models.SPOTrainer import SPOTrainer\n",
+    "from models.POTrainer import POTrainer"
    ]
   },
   {
@@ -136,33 +137,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1) Define your network dimensions\n",
+    "# Define your network dimensions\n",
     "input_size  =  num_features   # e.g. number of features in your cost‐vector\n",
     "hidden_size =  64   # number of neurons in the hidden layer\n",
     "output_size =  graph.num_cost   # e.g. # of target outputs, or number of classes\n",
     "\n",
-    "# 2) Build the model with nn.Sequential\n",
-    "model = nn.Sequential(\n",
+    "# Build the model with nn.Sequential\n",
+    "po_model = nn.Sequential(\n",
     "    nn.Linear(input_size, hidden_size),  # first affine layer\n",
     "    nn.ReLU(),                           # non‐linearity\n",
     "    nn.Linear(hidden_size, output_size),  # second affine layer\n",
     "    nn.Sigmoid()                         # output activation function\n",
     ")\n",
     "\n",
-    "# 3) Define device and move the model to it\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model.to(device)\n",
-    "\n",
-    "# 4) Define the loss function and optimizer\n",
-    "criterion = nn.MSELoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.1)\n",
-    "\n",
-    "# 5) Create DataLoader for training data\n",
-    "train_dataset = torch.utils.data.TensorDataset(torch.tensor(X_train, dtype=torch.float32), torch.tensor(c_train, dtype=torch.float32))\n",
-    "test_dataset = torch.utils.data.TensorDataset(torch.tensor(X_test, dtype=torch.float32), torch.tensor(c_test, dtype=torch.float32))\n",
-    "\n",
-    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=data_loader_batch_size, shuffle=True)\n",
-    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=data_loader_batch_size, shuffle=False)"
+    "# Define the loss function and optimizer\n",
+    "po_criterion = nn.MSELoss()\n",
+    "optimizer = torch.optim.Adam(po_model.parameters(), lr=0.1)"
    ]
   },
   {
@@ -172,175 +162,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_model(model, data_loader, criterion):\n",
-    "\n",
-    "    # Define loss\n",
-    "    loss = 0.0\n",
-    "    regret = 0.0\n",
-    "    cnt = 0\n",
-    "\n",
-    "    # Evaluate the model\n",
-    "    for x_batch, y_batch in data_loader:\n",
-    "        x_batch = x_batch.to(device)\n",
-    "        y_batch = y_batch.to(device)\n",
-    "\n",
-    "        # Forward pass\n",
-    "        y_pred = model(x_batch)\n",
-    "\n",
-    "        # Compute loss\n",
-    "        loss += criterion(y_pred, y_batch).item()\n",
-    "        cnt += 1\n",
-    "        \n",
-    "    # Optionally, you can return the loss or predictions for further analysis\n",
-    "    return loss/cnt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define loss and regret vectors\n",
-    "train_losses = []\n",
-    "train_regrets = []\n",
-    "test_losses = []\n",
-    "test_regrets = []\n",
-    "\n",
-    "# Training loop\n",
-    "for epoch in range(epochs):\n",
-    "    for x_batch, y_batch in train_loader:\n",
-    "        x_batch, y_batch = x_batch.to(device), y_batch.to(device)\n",
-    "\n",
-    "        # Forward pass\n",
-    "        y_pred = model(x_batch)\n",
-    "        loss   = criterion(y_pred, y_batch)\n",
-    "\n",
-    "        # Backprop + optimize\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "    train_losses.append(loss.item())\n",
-    "    train_regrets.append(pyepo.metric.regret(model, opt_model, optnet_train_loader))\n",
-    "    test_losses.append(evaluate_model(model, test_loader, criterion))\n",
-    "    test_regrets.append(pyepo.metric.regret(model, opt_model, optnet_test_loader))\n",
-    "    print(f\"Epoch {epoch+1}, Loss: {train_losses[-1]:.4f}, Regret: {train_regrets[-1]:.4f}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "epochs_range = list(range(1, epochs + 1))\n",
-    "\n",
-    "plt.figure(figsize=(12, 5))\n",
-    "\n",
-    "plt.subplot(1, 2, 1)\n",
-    "plt.plot(epochs_range, train_regrets)\n",
-    "plt.scatter(\n",
-    "            np.arange(len(test_regrets)) + 1, \n",
-    "            test_regrets, \n",
-    "            marker='x', \n",
-    "            color='red', \n",
-    "            label='Testing Regret'\n",
-    "            )\n",
-    "plt.title('Training Regret')\n",
-    "plt.xlabel('Epoch')\n",
-    "plt.ylabel('Regret')\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.plot(epochs_range, train_losses)\n",
-    "plt.scatter(\n",
-    "            np.arange(len(test_losses)) + 1, \n",
-    "            test_losses, \n",
-    "            marker='x', \n",
-    "            color='red', \n",
-    "            label='Testing Loss'\n",
-    "            )\n",
-    "plt.title('Training Loss')\n",
-    "plt.xlabel('Epoch')\n",
-    "plt.ylabel('Loss')\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "11",
-   "metadata": {},
-   "source": [
-    "## Smart Predict-then-Optimize with OptNet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create data loaders for training and testing\n",
-    "train_dataset = pyepo.data.dataset.optDataset(opt_model, X_train, c_train)\n",
-    "test_dataset = pyepo.data.dataset.optDataset(opt_model, X_test, c_test)\n",
-    "\n",
-    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=data_loader_batch_size, shuffle=True)\n",
-    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=data_loader_batch_size, shuffle=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Instantiate linear regression model\n",
-    "# model = LinearRegression(num_feat=num_features, num_edges=graph.num_cost)\n",
-    "\n",
-    "# 1) Define your network dimensions\n",
-    "input_size  =  num_features   # e.g. number of features in your cost‐vector\n",
-    "hidden_size =  64   # number of neurons in the hidden layer\n",
-    "output_size =  graph.num_cost   # e.g. # of target outputs, or number of classes\n",
-    "\n",
-    "# 2) Build the model with nn.Sequential\n",
-    "model = nn.Sequential(\n",
-    "    nn.Linear(input_size, hidden_size),  # first affine layer\n",
-    "    nn.ReLU(),                           # non‐linearity\n",
-    "    nn.Linear(hidden_size, output_size)  # second affine layer\n",
+    "po_trainer = POTrainer(\n",
+    "    pred_model=po_model,\n",
+    "    opt_model=opt_model,\n",
+    "    optimizer=optimizer,\n",
+    "    loss_fn=po_criterion\n",
     ")\n",
     "\n",
-    "# Init SPO+ loss\n",
-    "spop = pyepo.func.SPOPlus(opt_model, processes=1)\n",
-    "\n",
-    "# Init optimizer\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a trainer instance\n",
-    "trainer = Trainer(pred_model=model, \n",
-    "                  opt_model=opt_model, \n",
-    "                  optimizer=optimizer, \n",
-    "                  loss_fn=spop\n",
-    "                )\n",
-    "\n",
-    "train_loss_log, train_regret_log, test_loss_log, test_regret_log = trainer.fit(train_loader, test_loader, epochs=epochs)\n",
+    "train_loss_log, train_regret_log, test_loss_log, test_regret_log = po_trainer.fit(optnet_train_loader, optnet_test_loader, epochs=epochs)\n",
     "\n",
     "# Plot the learning curve\n",
-    "Trainer.vis_learning_curve(\n",
-    "    trainer,\n",
+    "POTrainer.vis_learning_curve(\n",
+    "    po_trainer,\n",
     "    train_loss_log,\n",
     "    train_regret_log,\n",
     "    test_loss_log,\n",
@@ -351,12 +184,168 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9",
+   "metadata": {},
+   "source": [
+    "## Smart Predict-then-Optimize with OptNet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define your network dimensions\n",
+    "input_size  =  num_features   # e.g. number of features in your cost‐vector\n",
+    "hidden_size =  64   # number of neurons in the hidden layer\n",
+    "output_size =  graph.num_cost   # e.g. # of target outputs, or number of classes\n",
+    "\n",
+    "# Build the model with nn.Sequential\n",
+    "spo_model = nn.Sequential(\n",
+    "    nn.Linear(input_size, hidden_size),  # first affine layer\n",
+    "    nn.ReLU(),                           # non‐linearity\n",
+    "    nn.Linear(hidden_size, output_size),  # second affine layer\n",
+    "    nn.Sigmoid()                         # output activation function\n",
+    ")\n",
+    "\n",
+    "# Init SPO+ loss\n",
+    "spop = pyepo.func.SPOPlus(opt_model, processes=1)\n",
+    "\n",
+    "# Init optimizer\n",
+    "optimizer = torch.optim.Adam(spo_model.parameters(), lr=.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a trainer instance\n",
+    "spo_trainer = SPOTrainer(pred_model=spo_model, \n",
+    "                  opt_model=opt_model, \n",
+    "                  optimizer=optimizer, \n",
+    "                  loss_fn=spop\n",
+    "                )\n",
+    "\n",
+    "train_loss_log, train_regret_log, test_loss_log, test_regret_log = spo_trainer.fit(optnet_train_loader, optnet_test_loader, epochs=epochs)\n",
+    "\n",
+    "# Plot the learning curve\n",
+    "SPOTrainer.vis_learning_curve(\n",
+    "    spo_trainer,\n",
+    "    train_loss_log,\n",
+    "    train_regret_log,\n",
+    "    test_loss_log,\n",
+    "    test_regret_log\n",
+    ")\n",
+    "\n",
+    "print(\"Final regret on test set: \", test_regret_log[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12",
+   "metadata": {},
+   "source": [
+    "## Compare both in application"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set parameters for data generation\n",
+    "test_data_samples = 10 # number of training data\n",
+    "cost_index = 1 # index of the cost vector to use\n",
+    "\n",
+    "# Generate data for shortest path problem\n",
+    "features, costs = pyepo.data.shortestpath.genData(\n",
+    "    test_data_samples, \n",
+    "    num_features, \n",
+    "    (graph.m, graph.n), \n",
+    "    deg=3, \n",
+    "    noise_width=0.05, \n",
+    "    seed=31\n",
+    ")\n",
+    "\n",
+    "# Choose a cost vector\n",
+    "true_costs = costs[cost_index]\n",
+    "features = features[cost_index]\n",
+    "\n",
+    "# Set the cost for the grid (Optionally specify the source and target nodes)\n",
+    "opt_model.setObj(true_costs)\n",
+    "\n",
+    "# Solve shortest path problem\n",
+    "path, obj = opt_model.solve(versatile=True, title=\"Shortest path on graph with chosen weights\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict shortest path with predict-then-optimize framework\n",
+    "predicted_costs = po_model(torch.tensor(features, dtype=torch.float32)).detach().numpy()\n",
+    "po_graph = ShortestPathGrid(network[0], network[1], cost=predicted_costs)\n",
+    "po_shortest_path = shortestPathGrb(po_graph)\n",
+    "po_path, po_obj = po_shortest_path.solve()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "15",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Predict shortest path with smart predict-then-optimize framework\n",
+    "predicted_costs = spo_model(torch.tensor(features, dtype=torch.float32)).detach().numpy()\n",
+    "spo_graph = ShortestPathGrid(network[0], network[1], cost=predicted_costs)\n",
+    "spo_shortest_path = shortestPathGrb(spo_graph)\n",
+    "spo_path, spo_obj = spo_shortest_path.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print results\n",
+    "print(f\"Objective (Predict-then-Optimize shortest path): \\t{opt_model.evaluate(po_path)}\")\n",
+    "print(f\"Objective (Smart Predict-then-Optimize shortest path): \\t{opt_model.evaluate(spo_path)}\")\n",
+    "\n",
+    "# Visualize results\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(16, 6))\n",
+    "po_shortest_path.visualize(ax=ax[0], \n",
+    "                     colored_edges=po_path,\n",
+    "                     title=\"Predict-then-Optimize shortest path\")\n",
+    "spo_shortest_path.visualize(ax=ax[1], \n",
+    "                   colored_edges=spo_path,\n",
+    "                   title=\"Smart Predict-then-Optimize shortest path\")\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Add random seeds everywhere (also pytorch) to ensure reproducibility\n",
+    "# TODO: Replace single-instance example above with a statistical argument"
+   ]
   }
  ],
  "metadata": {
