Seed randomness in Asym SPNI notebook

--- a/src/Notebooks/Asym_SPNI_PO.ipynb
+++ b/src/Notebooks/Asym_SPNI_PO.ipynb
@@ -69,7 +69,13 @@
     "epochs = 10\n",
     "\n",
     "# Set the random seed for reproducibility\n",
-    "np.random.seed(random_seed)"
+    "np.random.seed(random_seed)\n",
+    "\n",
+    "import random, torch\n",
+    "random.seed(random_seed)\n",
+    "torch.manual_seed(random_seed)\n",
+    "if torch.cuda.is_available():\n",
+    "    torch.cuda.manual_seed_all(random_seed)\n"
    ]
   },
   {
@@ -118,8 +124,9 @@
     "optnet_train_dataset = pyepo.data.dataset.optDataset(opt_model, X_train, c_train)\n",
     "optnet_test_dataset = pyepo.data.dataset.optDataset(opt_model, X_test, c_test)\n",
     "\n",
-    "optnet_train_loader = torch.utils.data.DataLoader(optnet_train_dataset, batch_size=data_loader_batch_size, shuffle=True)\n",
-    "optnet_test_loader = torch.utils.data.DataLoader(optnet_test_dataset, batch_size=data_loader_batch_size, shuffle=False)\n"
+    "g = torch.Generator().manual_seed(random_seed)\n",
+    "optnet_train_loader = torch.utils.data.DataLoader(optnet_train_dataset, batch_size=data_loader_batch_size, shuffle=True, generator=g)\n",
+    "optnet_test_loader = torch.utils.data.DataLoader(optnet_test_dataset, batch_size=data_loader_batch_size, shuffle=False, generator=g)\n"
    ]
   },
   {
@@ -138,14 +145,14 @@
    "outputs": [],
    "source": [
     "# Define your network dimensions\n",
-    "input_size  =  num_features   # e.g. number of features in your cost‐vector\n",
+    "input_size  =  num_features   # e.g. number of features in your cost\u2010vector\n",
     "hidden_size =  64   # number of neurons in the hidden layer\n",
     "output_size =  graph.num_cost   # e.g. # of target outputs, or number of classes\n",
     "\n",
     "# Build the model with nn.Sequential\n",
     "po_model = nn.Sequential(\n",
     "    nn.Linear(input_size, hidden_size),  # first affine layer\n",
-    "    nn.ReLU(),                           # non‐linearity\n",
+    "    nn.ReLU(),                           # non\u2010linearity\n",
     "    nn.Linear(hidden_size, output_size),  # second affine layer\n",
     "    nn.Sigmoid()                         # output activation function\n",
     ")\n",
@@ -199,14 +206,14 @@
    "outputs": [],
    "source": [
     "# Define your network dimensions\n",
-    "input_size  =  num_features   # e.g. number of features in your cost‐vector\n",
+    "input_size  =  num_features   # e.g. number of features in your cost\u2010vector\n",
     "hidden_size =  64   # number of neurons in the hidden layer\n",
     "output_size =  graph.num_cost   # e.g. # of target outputs, or number of classes\n",
     "\n",
     "# Build the model with nn.Sequential\n",
     "spo_model = nn.Sequential(\n",
     "    nn.Linear(input_size, hidden_size),  # first affine layer\n",
-    "    nn.ReLU(),                           # non‐linearity\n",
+    "    nn.ReLU(),                           # non\u2010linearity\n",
     "    nn.Linear(hidden_size, output_size),  # second affine layer\n",
     "    nn.Sigmoid()                         # output activation function\n",
     ")\n",
